sample/gitops/hello-world-flask/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-flask
  namespace: nexus
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: hello-flask
  template:
    metadata:
      labels:
        app: hello-flask
    spec:
      containers:
      - image: nexus-repo.nexus.cloud.35.209.207.26.nip.io/test/flask-test:1.0.0
        name: hello-flask
        ports:
        - containerPort: 8082
