sample/gitops/hello-world-flask/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-flask-nexus
  namespace: nexus
spec:
  ingressClassName: traefik
  rules:
  - host: hello-world-flask.nexus.cloud.35.209.207.26.nip.io
    http:
      paths:
      - backend:
          service:
            name: hello-flask-svc
            port:
              number: 80
        path: /
        pathType: Prefix
